--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Lora&family=Merriweather:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/07820b51f6.js" crossorigin="anonymous"></script>
+        <meta name="viewport" content="width=device-width" />
     </head>
 
     <body>
         
         <h1>Nicolas's profile</h1>
         <h2>Welcome ! 👋</h2>
-        <img src="images/profile-pic (1).png" alt="Nicolas Chicaud" width="200" height="200">
+        <img src="images/profile-pic.png" alt="Nicolas Chicaud" width="200" height="200">
 
         <h2>Contact</h2>
         <div class="card">
