--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <h1>Nicolas's profile</h1>
         <h2>Welcome ! 👋</h2>
-        <img src="images/profile-pic.png" alt="Nicolas Chicaud" width="200" height="200">
+        <img src="images/profile.png" alt="Nicolas Chicaud" width="200" height="200">
 
         <h2>Contact</h2>
         <div class="card">
